--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,14 @@
     <header>
       <nav>
         <ul>
-          <li><a href="">About</a></li>
-          <li><a href="">Paths</a></li>
+          <li><a href="#registration">Registration</a></li>
+          <li><a href="#workshops">Workshops</a></li>
           <li class="logo">
             <img class="logo" src="assets/logo.png" alt="HackGTeeny Logo" />
             <p>HackGTeeny</p>
           </li>
-          <li><a href="">Schedule</a></li>
-          <li><a href="">FAQs</a></li>
+          <li><a href="#schedule">Schedule</a></li>
+          <li><a href="#faqs">FAQs</a></li>
         </ul>
       </nav>
     </header>
@@ -27,7 +27,9 @@
       <section id="home">
         <div class="board">
           <div>
-            <a class="btn" href="TODO">Register</a>
+            <a class="btn" href="https://registration.teeny.hack.gt"
+              >Register</a
+            >
             <p>
               HackGTeeny is a series of six hour-and-a-half workshops for any
               Georgia Tech student who wants to learn fundamental concepts in
@@ -35,17 +37,24 @@
               happen daily at locations throughout Georgia Tech's campus from
               Monday, September 27th to Saturday, October 2nd. Each day is a new
               topic, ranging from data science to how to participate in a
-              hackathon!
+              hackathon! See below for more details on our schedule and
+              curriculum below. (resources).
             </p>
           </div>
-            <img
-              src="assets/splash.png"
-              alt="Beardell pointing at chart to students"
-            />
+          <img
+            src="assets/splash.png"
+            alt="Beardell pointing at chart to students"
+          />
         </div>
       </section>
-      <section id="about">
-        <h2>About</h2>
+      <section id="registration">
+        <h2>Registration</h2>
+        <p>
+          To sign up, go to
+          <a href="https://registration.teeny.hack.gt" target="_blank"
+            >registration.teeny.hack.gt</a
+          >. Be sure to register by <strong>Sunday, September 19th!</strong>
+        </p>
         <div class="about-item">
           <img
             src="assets/beardell-cubes.png"
@@ -54,11 +63,11 @@
           <div>
             <h3>Participants</h3>
             <p>
-              Admissions for the event will be first come first serve per
-              workshop (more information below), and for GT students only.
-              However, all materials and workshop recordings will be available
-              for free online after the event. Only those registered for the
-              event will be allowed to attend workshops.
+              Admissions for the event will be
+              <strong>first come first serve per workshop</strong> (more
+              information below), and for <strong>GT students only</strong>.
+              Only those registered for the event will be allowed to attend
+              workshops.
             </p>
           </div>
         </div>
@@ -80,80 +89,208 @@
             </p>
 
             <p>
-              **This mentor registration is separate from the HackGT 8 mentor
-              registration**. If you already signed up for HackGT 8 as a mentor,
-              you do not need to fill out the free response questions. If you
-              are accepted as a HackGTeeny mentor you will automatically be a
-              HackGT 8 mentor if you indicate in the registration.
+              <strong
+                >This mentor registration is separate from the HackGT 8 mentor
+                registration</strong
+              >. If you already signed up for HackGT 8 as a mentor, you do not
+              need to fill out the free response questions; we will pull your
+              response from your HackGT 8 mentor application. If you are
+              accepted as a HackGTeeny mentor you will automatically be a HackGT
+              8 mentor if you indicate in the registration.
             </p>
           </div>
         </div>
       </section>
-      <section id="paths">
-        <h2>Paths</h2>
-        <div class="path-row">
-          <div class="path">
-            <img src="assets/app-dev.png" alt="App/Web development path icon" />
-            <div>
-              <h4>App/Web development</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-          </div>
+      <section id="workshops">
+        <h2>Workshops</h2>
+        <p>
+          On the registration site, you can select as many of the following
+          workshops as you like. You can find a schedule of the workshops below
+          under <a href="#schedule">Schedule</a>. For the four Learning Paths
+          that will also be featured in more detail at HackGT 8 (App Dev, Data
+          Science, Design, and Systems), each workshop will be an introduction
+          to that topic, including a brief overview and some example
+          applications or projects. The other two workshops (Introduction to
+          Hackathons and Introduction to Development) will include information
+          applicable to HackGT 8, other hackathons, and development in general
+          that will be applicable throughout college and beyond! Descriptions
+          for each Learning Path or workshop are below.
+        </p>
 
-          <div class="path">
-            <img src="assets/datascience.png" alt="Data Science path icon" />
-            <div>
-              <h4>Data Science</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="path-row">
-          <div class="path">
-            <img src="assets/design.png" alt="Design path icon" />
-            <div>
-              <h4>Design</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-          </div>
+        <h4>App/Web development</h4>
+        <p>
+          This path covers Android, iOS, and web development; you can choose as
+          many of the options as you’d like! You will be introduced to the
+          basics of Android app development using Android Studio or iOS
+          development to build native mobile apps. We will also step through the
+          entire process of creating a simple full-stack web application using
+          JavaScript. Soon, you will be able to not only show off your technical
+          skills but also publish your accomplishments online, on the Google
+          Play store or your very own website!
+        </p>
 
-          <div class="path">
-            <img src="assets/systems.png" alt="Systems path icon" />
-            <div>
-              <h4>Systems</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-          </div>
-        </div>
+        <h4>Data Science</h4>
+        <p>
+          Whether you’re interested in machine learning algorithms or data
+          analytics and visualization, the data science learning path will
+          expose students to the process of collecting, cleaning, and analyzing
+          large sets of data!
+        </p>
+        <h4>Design</h4>
+        <p>
+          The Design Learning Path will teach you the fundamentals of user
+          interface/user experience (UI/UX) design from user research to
+          creating beautiful mockups and prototypes. Gain skills and knowledge
+          vital to the product development process and apply them to create
+          effective user-centered apps and websites!
+        </p>
+
+        <h4>Systems</h4>
+        <p>
+          In the Systems Learning Path, we will be going over the basics of
+          systems development. Specifically, we’ll be exploring robotics and
+          developing embedded systems using Arduinos to create innovative
+          projects that combine software and hardware!
+        </p>
+
+        <h4>Intro to Hackathons</h4>
+        <p>
+          New to hackathons and want to learn more about how the experience is?
+          At this workshop, we’ll talk about how a hackathon works and how to
+          work through the event to create a project within 36 hours! We’ll also
+          highlight resources, tips, and tricks to utilize during the event!
+        </p>
+
+        <h4>Intro to Development</h4>
+        <p>
+          For this workshop, we’ll walk through some common technologies and
+          practices that apply to personal projects and in the computer science
+          industry, such as brainstorming, version control, and collaboration!
+          By the end, you’ll be ready to work in a team on any project!
+        </p>
       </section>
       <section id="schedule">
         <h2>Schedule</h2>
-        <p>TODO: Note about how it is weekly this year</p>
-        <p></p>
-        <p>Coming soon!</p>
+        <p>
+          HackGTeeny will take place over the week from
+          <strong>Monday, September 27th to Saturday, October 2nd</strong>. We
+          will offer workshops throughout the week—feel free to attend as many
+          as you'd like!
+        </p>
+        <h4>App Development</h4>
+
+        <p>Monday, September 27th, 6:00pm - 7:30pm in Kendeda 210</p>
+
+        <h4>Data Science</h4>
+
+        <p>Tuesday, September 28th, 6:00pm - 7:30pm in Skiles 268</p>
+
+        <h4>Design</h4>
+
+        <p>Wednesday, September 29th, 6:00pm - 7:30pm in Skiles 270</p>
+
+        <h4>Systems</h4>
+
+        <p>Thursday, September 30th, 6:00pm - 7:30pm in Skiles 169</p>
+
+        <h4>Intro to Hackathons</h4>
+
+        <p>Friday, October 1st, 3:30pm - 5:00pm in Klaus 2447</p>
+
+        <h4>Intro to Development</h4>
+
+        <p>Saturday, October 2nd, 12:00pm - 1:30pm in Clough 144</p>
       </section>
       <section id="faqs">
         <h2>FAQs</h2>
+        <div class="faq">
+          <button class="question">
+            <span>
+              How do I participate?
+            </span>
+            <i class="gg-chevron-right"></i>
+          </button>
+          <div class="hide answer">
+            Register at
+            <a href="https://registration.teeny.hack.gt" target="_blank"
+              >registration.teeny.hack.gt</a
+            >
+            and select which workshops you would be interested in attending.
+          </div>
+        </div>
+
+        <div class="faq">
+          <button class="question">
+            <span>
+              Who is eligible to participate?
+            </span>
+            <i class="gg-chevron-right"></i>
+          </button>
+          <div class="hide answer">
+            Any student at Georgia Tech, regardless of major or year, can
+            participate in HackGTeeny. Admissions is first come first serve per
+            workshop, so register soon!
+          </div>
+        </div>
+
+        <div class="faq">
+          <button class="question">
+            <span>
+              Can I attend more than one workshop?
+            </span>
+            <i class="gg-chevron-right"></i>
+          </button>
+          <div class="hide answer">
+            Definitely! Register for as many workshops as you are interested in!
+          </div>
+        </div>
+
+        <div class="faq">
+          <button class="question">
+            <span>
+              Do I need to have any prior experience?
+            </span>
+            <i class="gg-chevron-right"></i>
+          </button>
+          <div class="hide answer">
+            No! We are going to start from the very beginning to accommodate all
+            types of beginners. Prior to the event, we will also send you
+            resources to help you prepare for the workshops.
+          </div>
+        </div>
+
+        <div class="faq">
+          <button class="question">
+            <span>
+              I want to mentor! Where do I sign up?
+            </span>
+            <i class="gg-chevron-right"></i>
+          </button>
+          <div class="hide answer">
+            Register at
+            <a href="https://registration.teeny.hack.gt" target="_blank"
+              >registration.teeny.hack.gt</a
+            >
+            and select the “Mentor” registration. Sign up by Sunday, September
+            19th!
+          </div>
+        </div>
+
+        <div class="faq">
+          <button class="question">
+            <span>
+              What’s the difference between HackGTeeny and HackGT 8?
+            </span>
+            <i class="gg-chevron-right"></i>
+          </button>
+          <div class="hide answer">
+            HackGTeeny is a preparatory workshop to prepare you for HackGT and
+            other hackathons. The concepts covered in HackGTeeny will be further
+            reinforced and continued in HackGT 8 so you can make a functional
+            project by the end of the weekend!
+          </div>
+        </div>
+
         <div class="faq">
           <button class="question">
             <span>
