Fix typo in content

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
               Monday, September 27th to Saturday, October 2nd. Each day is a new
               topic, ranging from data science to how to participate in a
               hackathon! See below for more details on our schedule and
-              curriculum below. (resources).
+              curriculum below.
             </p>
           </div>
           <img
