Add google analytics

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>HackGTeeny</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-4HSHG90MDC"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-4HSHG90MDC");
+    </script>
     <link href="https://css.gg/chevron-right.css" rel="stylesheet" />
     <link href="https://css.gg/chevron-down.css" rel="stylesheet" />
     <link href="./index.css" rel="stylesheet" />
