add bluejeans links

--- a/src/index.html
+++ b/src/index.html
@@ -193,27 +193,27 @@
         </p>
         <h4>App Development</h4>
 
-        <p>Monday, September 27th, 6:00pm - 7:30pm in Kendeda 210</p>
+        <p>Monday, September 27th, 6:00pm - 7:30pm in Kendeda 210, Virtual: Join <a href="https://primetime.bluejeans.com/a2m/live-event/yzcszgyz">here!</a></p>
 
         <h4>Data Science</h4>
 
-        <p>Tuesday, September 28th, 6:00pm - 7:30pm in Skiles 268</p>
+        <p>Tuesday, September 28th, 6:00pm - 7:30pm in Skiles 26, Virtual: Join <a href="https://primetime.bluejeans.com/a2m/live-event/sywfxzpf">here!</a></p>
 
         <h4>Design</h4>
 
-        <p>Wednesday, September 29th, 6:00pm - 7:30pm in Skiles 270</p>
+        <p>Wednesday, September 29th, 6:00pm - 7:30pm in Skiles 270, Virtual: Join <a href="https://primetime.bluejeans.com/a2m/live-event/jsxtytsh">here!</a></p>
 
         <h4>Systems</h4>
 
-        <p>Thursday, September 30th, 6:00pm - 7:30pm in Skiles 169</p>
+        <p>Thursday, September 30th, 6:00pm - 7:30pm in Skiles 169, Virtual: Join <a href="https://primetime.bluejeans.com/a2m/live-event/kehdrcby">here!</a></p>
 
         <h4>Intro to Hackathons</h4>
 
-        <p>Friday, October 1st, 3:30pm - 5:00pm in Klaus 2447</p>
+        <p>Friday, October 1st, 3:30pm - 5:00pm in Klaus 2447, Virtual: Join <a href="https://primetime.bluejeans.com/a2m/live-event/swzreggt">here!</a></p>
 
         <h4>Intro to Development</h4>
 
-        <p>Saturday, October 2nd, 12:00pm - 1:30pm in Clough 144</p>
+        <p>Saturday, October 2nd, 12:00pm - 1:30pm in Clough 144, Virtual: Join <a href="https://primetime.bluejeans.com/a2m/live-event/gxvttbqy">here!</a></p>
       </section>
       <section id="faqs">
         <h2>FAQs</h2>
